# signalforge

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml
.agents/skills/create-feature-spec/: SKILL.md
.agents/skills/create-technical-design/: SKILL.md
.agents/skills/decompose-feature-tasks/: SKILL.md
.agents/skills/implement-spec-task/: SKILL.md
.agents/skills/review-feature-spec/: SKILL.md
.agents/skills/verify-spec/: SKILL.md
docs/operations/: daily-digest.md  telegram-history-import.md
docs/project-context/: initial-project-brief.md  original-request.md  sdd-clarifications.md
migrations/: env.py
migrations/versions/: 0001_telegram_history_import.py  0002_daily_digest.py
specs/: README.md
specs/architecture/: data-model.md  security.md  system-overview.md
specs/features/001-telegram-history-import/: decisions.md  design.md  spec.md  tasks.md  verification.md
specs/features/002-daily-knowledge-digest/: decisions.md  design.md  spec.md  tasks.md  verification.md
specs/product/: product-spec.md
specs/templates/: decision-template.md  design-template.md  feature-spec-template.md  product-spec-template.md  tasks-template.md
src/signalforge/: __init__.py  __main__.py  cli.py  composition.py  settings.py
src/signalforge/application/: __init__.py  errors.py  import_service.py  (+2 more)
tests/: conftest.py  test_cli.py  test_package.py  test_settings.py
tests/application/: test_import_service.py
tests/digest/: test_digest_domain.py  test_generator.py
tests/infrastructure/: test_postgres_repositories.py  test_telethon_history_source.py
(+14 files in other folders)
