[build-system]
requires = ["setuptools>=80,<82"]
build-backend = "setuptools.build_meta"

[project]
name = "signalforge"
version = "0.1.0"
description = "Personal AI-native knowledge pipeline"
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "alembic>=1.16,<2",
    "psycopg[binary]>=3.2,<4",
    "sqlalchemy>=2.0,<2.1",
    "telethon>=1.42,<2",
]

[project.optional-dependencies]
dev = [
    "build>=1.2,<2",
    "mypy>=1.17,<2",
    "pip-audit>=2.9,<3",
    "pytest>=8.4,<10",
    "ruff>=0.12,<1",
]

[project.scripts]
signalforge = "signalforge.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-ra --strict-config --strict-markers"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
files = ["src", "tests"]
